# geo-skills

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL.md  LICENSE  Makefile  QUICKSTART.md  README.md  RELEASE_v1.1.0.md  SECURITY.md  competitor-analysis.md  config.py  demo.sh  docker-compose.yml  geo-annotated-demo.md  geo-rewrite-prompt-en.md  geo-rewrite-prompt.md  geo-rewrite-skill.md  geo_content_audit.py  geo_cost.py  geo_flow.py  geo_keyword_expander.py  geo_notify.py  geo_rewrite.py  geo_tracker.py  geo_watch.py  index.html  install.sh  mkdocs.yml  mypy.ini  pyproject.toml  setup.py  visualizer.py
.github/workflows/: ci.yml  docs.yml  publish.yml  test.yml
changelog/: index.html
completions/: geo-rewrite.bash  geo-rewrite.zsh
demo/: index.html  report.html
docs/: changelog.md  index.md  methodology.md  quickstart.md
docs/demo/: index.md
docs/prompts/: cn.md  en.md  ja.md  ko.md
docs/scripts/: api-server.md  geo-audit.md  geo-bench.md  geo-cost.md  geo-expand.md  geo-flow.md  geo-notify.md  geo-rewrite.md  geo-tracker.md  geo-watch.md  visualizer.md
examples/: before-after.md  health-pipeline.md
geo_skills/: __init__.py  api_server.py  geo_bench.py  geo_compare.py  geo_content_audit.py  geo_cost.py  geo_flow.py  geo_keyword_expander.py  geo_notify.py  geo_rewrite.py  geo_tracker.py  geo_watch.py  pyproject.toml
methodology/: index.html
prompts/: geo-rewrite-prompt-ja.md  geo-rewrite-prompt-ko.md
prompts/cn/: index.html
prompts/en/: index.html
prompts/ja/: index.html
prompts/ko/: index.html
quickstart/: index.html
results/: benchmark-leaderboard.md  cost-dashboard.html
results/demo-business/: README.md
results/demo-health/: README.md
results/demo-tech/: README.md  original.md
results/pipeline-demo/: 01-keywords.csv  02-rewritten.md  03-audit.md  04-tracker.json  05-summary.md
scripts/api-server/: index.html
scripts/geo-audit/: index.html
scripts/geo-bench/: index.html
scripts/geo-cost/: index.html
scripts/geo-expand/: index.html
scripts/geo-flow/: index.html
scripts/geo-notify/: index.html
scripts/geo-rewrite/: index.html
scripts/geo-tracker/: index.html
scripts/geo-watch/: index.html
scripts/visualizer/: index.html
search/: search_index.json
site/: 404.html  index.html
site/scripts/geo-audit/: index.html
site/scripts/geo-bench/: index.html
site/scripts/geo-flow/: index.html
site/scripts/geo-rewrite/: index.html
site/scripts/geo-watch/: index.html
site/scripts/visualizer/: index.html
skills/geo-content-audit/: SKILL.md  example-audit.md
skills/geo-keyword-expander/: SKILL.md  example-expand.md
skills/geo-rewrite/: SKILL.md  example-before.md
tests/: benchmark.py  conftest.py  test_core.py  test_cost.py  test_edge_cases.py  test_notify.py  test_pipeline.py  test_real_api.py  test_visualizer.py  test_watch.py
tests/test_data/: article_business.md  article_health.md
